--- a/src/app/components/step-7/step-7.component.html
+++ b/src/app/components/step-7/step-7.component.html
@@ -10,68 +10,60 @@
       <img
         *ngIf="showImages"
         src="/img/complete-star-spin.gif"
-        width="100px"
-        [@flow-out-left]
-        (@flow-out-left.done)="hideImages()"
-        style="position: absolute; bottom: 0; left: 120px"
+        [@flowOutLeftAnimation]
+        (@flowOutLeftAnimation.done)="hideImages()"
+        class="moving-star"
       />
 
       <img
         *ngIf="showImages"
         src="/img/complete-star-spin.gif"
-        width="100px"
-        [@flow-out-left-middle]
-        (@flow-out-left-middle.done)="hideImages()"
-        style="position: absolute; bottom: 0; left: 120px"
+        [@flowOutLeftMiddleAnimation]
+        (@flowOutLeftMiddleAnimation.done)="hideImages()"
+        class="moving-star"
       />
 
       <img
         *ngIf="showImages"
         src="/img/complete-star-spin.gif"
-        width="100px"
-        [@flow-out-right]
-        (@flow-out-right.done)="hideImages()"
-        style="position: absolute; bottom: 0; left: 120px"
+        [@flowOutRightAnimation]
+        (@flowOutRightAnimation.done)="hideImages()"
+        class="moving-star"
       />
 
       <img
         *ngIf="showImages"
         src="/img/complete-star-spin.gif"
-        width="100px"
-        [@flow-out-right-middle]
-        (@flow-out-right-middle.done)="hideImages()"
-        style="position: absolute; bottom: 0; left: 120px"
+        [@flowOutRightMiddleAnimation]
+        (@flowOutRightMiddleAnimation.done)="hideImages()"
+        class="moving-star"
       />
 
       <img
         *ngIf="showImages"
         src="/img/complete-star-spin.gif"
-        width="100px"
-        [@flow-out-top-middle]
-        (@flow-out-top-middle.done)="hideImages()"
-        style="position: absolute; bottom: 0; left: 120px"
+        [@flowOutTopMiddleAnimation]
+        (@flowOutTopMiddleAnimation.done)="hideImages()"
+        class="moving-star"
       />
 
       <img
         *ngIf="showMiddleStar"
-        [@flow-out-top-left]
-        (@flow-out-top-left.done)="hideMiddleStar()"
+        [@flowOutTopLeftAnimation]
+        (@flowOutTopLeftAnimation.done)="hideMiddleStar()"
         src="/img/complete-star.png"
-        width="50px"
-        style="position: absolute; bottom: 10px; left: 153px"
+        class="moving-top-left-star"
       />
       <img
         *ngIf="!showImages && !showMiddleStar"
         src="/img/complete-star.png"
-        width="50px"
-        style="position: absolute; top: -88px; left: -12px"
+        class="top-left-star"
       />
       <h1
         *ngIf="!showImages && !showMiddleStar"
-        class="text-warning"
-        style="position: absolute; top: 44px; left: 68px"
-        [@zoomInMessage]
-        (@zoomInMessage.done)="moveNext()"
+        class="text-warning achieved-message"
+        [@zoomInMessageAnimation]
+        (@zoomInMessageAnimation.done)="moveNext()"
       >
         Goal Achieved
       </h1>
