Fixed smoothness issue step 8

--- a/src/app/components/step-8/step-8.component.html
+++ b/src/app/components/step-8/step-8.component.html
@@ -4,7 +4,7 @@
       <h4 class="my-0 py-0 text-center">Result</h4>
     </div>
     <div class="card-body text-center">
-      <img src="/img/adeeb_farooqi.png" />
+      <img src="/img/adeeb_farooqi.png" height="230px" />
     </div>
     <div class="card-footer bg-lighter-green text-center">
       <button
